# MedicalBot

./: .gitignore  Makefile  README.md  agent.Dockerfile  gitignore  pyproject.toml
.github/: deploy-monitoring-lambda.yml
.github/workflows/: deploy-chat-lambda.yml  deploy-feedback-lambda.yaml  deploy-feedback-lambda.yml  deploy-lambda-authorizer.yml  deploy-lambda.yml  deploy-monitoring-lambda.yml  download-cloudwatch-dashboard.yml  feedback-widget.json  promote-canary.yml  taskstatus-widget.json  test.yml
docs/: dashboard.html
mlflow-project/: MLproject  conda.yaml  config.py  deploy_model.py  pyproject.toml  register_promote_model.py  train_model.py
mlruns/0/: meta.yaml
models/: COPD_Classifier  model_metadata.json
notebooks/: agent_orchestrator.ipynb  context_retriever.ipynb  datadoctor_ui.ipynb  deploy_model.ipynb  discriminative_power_categoricals.ipynb  discriminative_power_numericals.ipynb  explore_patient_data.ipynb  preprocess_data.ipynb  preprocess_patient_data.ipynb  query_remote_chatbot.ipynb  register_promote_model.ipynb  test_agent_orchestrator.ipynb  test_context_retriever.ipynb  test_datadoctor_ui.ipynb  test_medicalbot_ui.ipynb  train_classification_model.ipynb  train_model.ipynb  upload_diagnosis_data.ipynb
scripts/: clean_markdown_files.py  preprocess_data.py  preprocess_patient_data.py  remove_duplicate_files.py  train_classification_model.py  train_model.py  upload_diagnosis_data.py
src/: config.py  context_retriever.py  datadoctor_ui.py  lambda_function.py  orchestrator.py  preprocess_data.py  table_schema_retriever.py  train_model.py
(+71 files in other folders)
