[project]
name = "medicalbot"
version = "0.1.0"
description = "AI agent to summarize medical records"
authors = [
    {name = "Luís",email = "luis.fmso.negrao@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "boto3 (>=1.40.67,<2.0.0)"
]

[tool.poetry.group.ui.dependencies]
"requests (>=2.32.5,<3.0.0)",
"gradio (>=5.49.1,<6.0.0)",



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
